--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1 class="heading">
+        <img class="logo" src="assets/images/science-logo.png" alt="Logo showing double helix structure of DNA">
+        Women in STEM quiz
+    </h1>
+
+    <div class="quiz-area">
+
+    </div>
+
+    <div class="score-area">
+        <p class="scores">Correct Answers <span id="correct">0</span></p>
+        <p class="scores">Incorrect Answers <span id="incorrect">0</span></p>
+    </div>
 
     <script src="assets/js/script.js"></script>
     <script src="assets/js/questions.js"></script>
