--- a/index.html
+++ b/index.html
@@ -14,7 +14,19 @@
     </h1>
 
     <div class="quiz-area">
-
+        <div id="quiz-container">
+            <div id="question">Question</div>
+            <div id="answer-buttons">
+                <button class="btn">Answer 1</button>
+                <button class="btn">Answer 2</button>
+                <button class="btn">Answer 3</button>
+                <button class="btn">Answer 4</button>
+            </div>
+        </div>
+        <div id="controls-container">
+            <button id="start-btn" class="btn">Start</button>
+            <button id="next-btn" class="btn">Next</button>
+        </div>
     </div>
 
     <div class="score-area">
