Add function to start quiz to script.js file

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     </h1>
 
     <div class="quiz-area">
-        <div id="quiz-container">
+        <p id="intro-text">
+        Welcome to the Women in STEM quiz! Test your knowledge and find out more...
+        </p>
+        <div id="quiz-container" class="hide">
             <div id="question">Question</div>
             <div id="answer-buttons">
                 <button class="btn">Answer 1</button>
@@ -28,7 +31,7 @@
         </div>
         <div id="controls-container">
             <button id="start-btn" class="btn">Start</button>
-            <button id="next-btn" class="btn">Next</button>
+            <button id="next-btn" class="btn hide">Next</button>
         </div>
     </div>
 
