Add code to increment score and incorrect answers tally

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     </div>
 
     <div class="score-area">
-        <p class="scores">Correct Answers <span id="correct">0</span></p>
-        <p class="scores">Incorrect Answers <span id="incorrect">0</span></p>
+        <p class="scores">Correct Answers <span id="right">0</span></p>
+        <p class="scores">Incorrect Answers <span id="wrong">0</span></p>
     </div>
 
     <script src="assets/js/script.js"></script>
