Add code to end the quiz

--- a/index.html
+++ b/index.html
@@ -26,9 +26,16 @@
                 <button class="btn">Answer 4</button>
             </div>
         </div>
+        <div id="quiz-feedback" class="hide">
+            <p id="score-feedback"></p>
+            <p>To find out more, visit...</p>
+            <p>Or click the Restart button below to quiz again and improve your score!</p>
+        </div>
         <div id="controls-container">
             <button id="start-btn" class="btn">Start</button>
             <button id="next-btn" class="btn hide">Next</button>
+            <button id="finish-btn" class="btn hide">Finish Quiz</button>
+            <button id="restart-btn" class="btn hide">Restart Quiz</button>
         </div>
     </div>
 
