Add links and extrainfo content

--- a/index.html
+++ b/index.html
@@ -26,9 +26,19 @@
                 <button class="btn">Answer 4</button>
             </div>
         </div>
+        <div id="extra-info" class="hide">Extra information about the correct answer</div>
         <div id="quiz-feedback" class="hide">
             <p id="score-feedback"></p>
-            <p>To find out more, visit...</p>
+            <p>You can find out more information by visiting the following links:</p>
+            <p>
+                <a target="_blank" rel="noopener" href="https://www.stem.org.uk/resources/community/collection/420619/resources-support-promoting-women-stem">Resources from STEM Learning</a>, a UK-based organisation aiming to promote STEM education across the country
+            </p>
+            <p>
+                <a target="_blank" rel="noopener" href="https://www.aauw.org/resources/research/the-stem-gap/">Research by the AAUW</a>, an American association advocating for equal opportunities and pay for women in the US
+            </p>
+            <p>
+                <a target="_blank" rel="noopener" href="https://www.iie.org/Programs/WeTech/UtilityNav/STEM-Resources-for-Women-and-Girls">Links to further resources from the IIE</a>, a global non-profit organisation that designs and implements international education strategies and program services
+            </p>
             <p>Or click the Restart button below to quiz again and improve your score!</p>
         </div>
         <div id="controls-container">
