Add wrong answer info and define variables to show extra info

--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
                 <button class="btn">Answer 4</button>
             </div>
         </div>
-        <div id="extra-info" class="hide">Extra information about the correct answer</div>
+        <div id="extra-info" class="hide">
+            <p id="info">Further info about the correct answer</p>
+            <p id="extra1">Extra info about the first incorrect answer</p>
+            <p id="extra2">Extra info about the second incorrect answer</p>
+            <p id="extra3">Extra info about the third incorrect answer</p>
+        </div>
         <div id="quiz-feedback" class="hide">
             <p id="score-feedback"></p>
             <p>You can find out more information by visiting the following links:</p>
