Add JS functions to display extra info (WIP)

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </div>
         <div id="extra-info" class="hide">
-            <p id="info">Further info about the correct answer</p>
+            <p id="more-info">Further info about the correct answer</p>
             <p id="extra1">Extra info about the first incorrect answer</p>
             <p id="extra2">Extra info about the second incorrect answer</p>
             <p id="extra3">Extra info about the third incorrect answer</p>
