Add styles to improve appearance on smaller devices

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         Women in STEM quiz
     </h1>
 
-    <div class="quiz-area">
+    <div id="quiz-area">
         <p id="intro-text">
         Welcome to the Women in STEM quiz! Test your knowledge and find out more...
         </p>
@@ -27,13 +27,14 @@
             </div>
         </div>
         <div id="extra-info" class="hide">
-            <p id="more-info">Further info about the correct answer</p>
-            <p id="extra1">Extra info about the first incorrect answer</p>
-            <p id="extra2">Extra info about the second incorrect answer</p>
-            <p id="extra3">Extra info about the third incorrect answer</p>
+            <p id="more-info" class="learn">Further info about the correct answer</p>
+            <p id="extra1" class="learn">Extra info about the first incorrect answer</p>
+            <p id="extra2" class="learn">Extra info about the second incorrect answer</p>
+            <p id="extra3"class="learn">Extra info about the third incorrect answer</p>
         </div>
         <div id="quiz-feedback" class="hide">
             <p id="score-feedback"></p>
+            <br>
             <p>You can find out more information by visiting the following links:</p>
             <p>
                 <a target="_blank" rel="noopener" href="https://www.stem.org.uk/resources/community/collection/420619/resources-support-promoting-women-stem">Resources from STEM Learning</a>, a UK-based organisation aiming to promote STEM education across the country
@@ -44,6 +45,7 @@
             <p>
                 <a target="_blank" rel="noopener" href="https://www.iie.org/Programs/WeTech/UtilityNav/STEM-Resources-for-Women-and-Girls">Links to further resources from the IIE</a>, a global non-profit organisation that designs and implements international education strategies and program services
             </p>
+            <br>
             <p>Or click the Restart button below to quiz again and improve your score!</p>
         </div>
         <div id="controls-container">
